--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,7 @@
 img {
-    border: var(--accent-background-color) solid var(--border-width);
+    border: var(--accent-background-color) solid 1rem;
     float: right;
-    margin-left: 2rem;
+    margin: 1rem;
 }
 
 .button {
